2006-12-14  Nurdin Premji <npremji@redhat.com>

	* util/fstack.exp: New file.

2006-12-14  Stan Cox  <scox@redhat.com>

	* expr/20061115-2.c (assign_char, assign_long, assign_char_arr): New.
	* expr/20061115-1.c (loop_2): Use it.
	* expr/CppParser.exp: Test it.

2005-11-15  Stan Cox  <scox@redhat.com>

	* lib/frysk.exp: New file.
	* expr/CppParser.exp: Use it.
	* expr/20061115-1.c: New file.
	* expr/20061115-2.c: New file.

2005-09-09  Andrew Cagney  <cagney@redhat.com>

	* expr/CppParser.exp: Update to match com.redhat.fedora.frysk to
	frysk reorg.

2005-08-24  Tarun Khanna  <tkhanna@redhat.com>

	* expr: New directory to store DejaGNU test scripts for the
	expression parser.
	* expr/CppParser.exp: New expect test script for testing the
	expression parser.

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: