@@ -1,5 +1,7 @@
 2006-12-14  Nurdin Premji <npremji@redhat.com>
 
+	* util/fstack.exp: Changed [0-9a-f] to [[:xdigit:]]
+
 	* util/fstack.exp: New file.
 
 2006-12-14  Stan Cox  <scox@redhat.com>
